[package]
name = "helio"
version = "0.1.0"
description = "一个借鉴 Surge 架构的 macOS 代理与 VPN 仪表盘原型。"
authors = ["kam74515-boop"]
license = "MIT"
repository = "https://github.com/kam74515-boop/helio-macos-vpn"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "helio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
sysinfo = "0.33"
tokio = { version = "1", features = ["process", "time", "macros"] }
